src/DlibDotNet.Native/dlib/matrix/matrix_utilities.h

DLLEXPORT void* linspace(double start, double end, int num)
{
    dlib::matrix<double> ret = dlib::linspace(start, end, num);
    return new dlib::matrix<double>(ret);
}
DLLEXPORT int matrix_cast(matrix_element_type type, void* matrix, int templateRows, int templateColumns, matrix_element_type desttype, void** ret)
{
    int err = ERR_OK;
    switch(type)
    {
        case matrix_element_type::UInt8:
            matrix_cast_template(uint8_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::UInt16:
            matrix_cast_template(uint16_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::UInt32:
            matrix_cast_template(uint32_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::UInt64:
            matrix_cast_template(uint64_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::Int8:
            matrix_cast_template(int8_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::Int16:
            matrix_cast_template(int16_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::Int32:
            matrix_cast_template(int32_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::Int64:
            matrix_cast_template(int64_t, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::Float:
            matrix_cast_template(float, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::Double:
            matrix_cast_template(double, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::RgbPixel:
            matrix_cast_template_rgb_pixel(rgb_pixel, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::BgrPixel:
            matrix_cast_template_bgr_pixel(bgr_pixel, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::HsiPixel:
            matrix_cast_template_hsi_pixel(hsi_pixel, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        case matrix_element_type::RgbAlphaPixel:
            matrix_cast_template_rgb_alpha_pixel(rgb_alpha_pixel, desttype, matrix, templateRows, templateColumns, ret, err);
            break;
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_length(matrix_element_type type, void* matrix, int templateRows, int templateColumns, void* ret)
{
    int error = ERR_OK;

    matrix_numeric_template(type,
                            error,
                            matrix_template_size_template,
                            matrix_length_template,
                            templateRows,
                            templateColumns,
                            matrix,
                            ret);

    return error;
}
DLLEXPORT void matrix_length_dpoint(void* point, double* ret)
{
    dlib::dpoint& p = *static_cast<dlib::dpoint*>(point);
    *ret = dlib::length(p);
}
DLLEXPORT void matrix_length_point(void* point, int* ret)
{
    dlib::point& p = *static_cast<dlib::point*>(point);
    *ret = dlib::length(p);
}
DLLEXPORT int matrix_length_squared(matrix_element_type type, void* matrix, int templateRows, int templateColumns, void* ret)
{
    int error = ERR_OK;

    matrix_numeric_template(type,
                            error,
                            matrix_template_size_template,
                            matrix_length_squared_template,
                            templateRows,
                            templateColumns,
                            matrix,
                            ret);

    return error;
}
DLLEXPORT int matrix_join_rows(matrix_element_type type, void* matrix1, void* matrix2, int templateRows, int templateColumns, void** ret)
{
    int error = ERR_OK;

    matrix_template(type,
                    error,
                    matrix_template_size_template,
                    matrix_join_rows_template,
                    templateRows,
                    templateColumns,
                    matrix1,
                    matrix2,
                    ret);

    return error;
}
DLLEXPORT int matrix_max(matrix_element_type type, void* matrix, int templateRows, int templateColumns, void* ret)
{
    int error = ERR_OK;

    matrix_numeric_template(type,
                            error,
                            matrix_template_size_template,
                            matrix_max_template,
                            templateRows,
                            templateColumns,
                            matrix,
                            ret);

    return error;
}
DLLEXPORT int matrix_min(matrix_element_type type, void* matrix, int templateRows, int templateColumns, void* ret)
{
    int error = ERR_OK;

    matrix_numeric_template(type,
                            error,
                            matrix_template_size_template,
                            matrix_min_template,
                            templateRows,
                            templateColumns,
                            matrix,
                            ret);

    return error;
}
DLLEXPORT int matrix_max_point(array2d_type type, void* matrix, dlib::point** ret)
{
    int error = ERR_OK;

    array2d_numeric_template(type,
                             error,
                             matrix_max_point_template,
                             matrix,
                             ret);

    return error;
}
DLLEXPORT int matrix_max_pointwise_matrix(matrix_element_type type, void* matrix1, void* matrix2, int templateRows, int templateColumns, void** ret)
{
    int error = ERR_OK;

    matrix_numeric_template(type,
                            error,
                            matrix_template_size_template,
                            matrix_max_pointwise_matrix_template,
                            templateRows,
                            templateColumns,
                            matrix1,
                            matrix2,
                            ret);

    return error;
}
DLLEXPORT int matrix_mean(matrix_element_type dst_type, void* matrix, int templateRows, int templateColumns, element_type opType, matrix_element_type src_type, void** ret)
{
    int error = ERR_OK;

    auto type = src_type;
    auto subtype = dst_type;

    switch(opType)
    {
        case element_type::OpStdVectToMat:
            matrix_numeric_inout_in_template(type,
                                             error,
                                             matrix_decimal_inout_out_template,
                                             matrix_inout_template_size_template,
                                             matrix_mean_op_std_vect_to_mat_template,
                                             subtype,
                                             templateRows,
                                             templateColumns,
                                             matrix,
                                             ret);
            break;
        default:
            error = ERR_MATRIX_OP_TYPE_NOT_SUPPORT;
            break;
    }

    return error;
}
DLLEXPORT int matrix_trans(matrix_element_type type, void* matrix, int templateRows, int templateColumns, void** ret)
{
    int error = ERR_OK;

    matrix_numeric_template(type,
                            error,
                            matrix_template_size_template,
                            matrix_trans_template,
                            templateRows,
                            templateColumns,
                            matrix,
                            ret);

    return error;
}